bug fix on mobile screen, there's a white space on the right due to hover .tooltip

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,11 @@
   font-family: var(--poppins);
   cursor: default;
 }
-
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 ul li, ol li {
   list-style: none;
 }
@@ -162,11 +166,13 @@ a:visited {
 .tooltip .tooltip-text {
   visibility: hidden;
   font-size: var(--tooltip);
-  width: 8rem;
   background-color: var(--ter-color);
   color: var(--pri-color);
   text-align: center;
   border-radius: 0.25rem;
+  width: 6rem;
+  margin-left: -5rem;
+  margin-top: 1.5rem;
   padding: 0.2rem 1rem;
   text-transform: none !important;
 
@@ -266,6 +272,6 @@ footer {
 
 @media (max-width: 770px) {
   .container {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(1,1fr);
   }
 }
